# r2048

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: linux.yml  macos.yml  windows.yml
r2048/: .gitignore  Cargo.toml  LICENSE
r2048/src/: app.rs  event.rs  lib.rs  main.rs  ui.rs
r2048/src/events/: app.rs
r2048/src/tui/: ui.rs
src/: board.rs  db.rs  events.rs  lib.rs  main.rs  tui.rs
src/events/: app.rs
src/tui/: ui.rs
