[package]
name = "r2048"
version = "0.1.0"
description = "2048 written in rust"
authors = ["Rares-Stefan Asaftei <rasaft29@gmail.com>"]
license = "MIT"
edition = "2024"
repository = "https://github.com/asaft29/r2048"

[lib]
name = "r2048"
path = "src/lib.rs"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
rand = "0.9.1"
tui-big-text = "0.7.1"
rusqlite = "0.37.0"
